# novelai-openclaw-adaptor

./: README.md  SKILL.md  config.example.toml  pyproject.toml
docs/: README.ja.md  README.zh-CN.md
novelai_openclaw_adaptor/: __init__.py  config.py  config_cli.py  image_cli.py  shim.py
